# esp-smarthome-curtain-dry

./: README.md
esp-smarthome-wifi-mesh-fw/components/esp_peripherals/: .gitlab-ci.yml  CMakeLists.txt  Kconfig  LICENSE  README.md  component.mk  component.mk.txt  create_lib.sh  esp_peripherals.c  esp_storage.c  json_utils.c  periph_alarm.c  periph_blufi.c  periph_button.c  periph_console.c  periph_led.c  periph_mdns.c  periph_ota.c  periph_ppp.c  periph_sdcard.c  periph_touch.c  periph_web.c  periph_wifi.c  tct_template.c
esp-smarthome-wifi-mesh-fw/components/esp_peripherals/include/: audio_event_iface.h  esp_peripherals.h  esp_storage.h  json_utils.h  periph_alarm.h  periph_blufi.h  periph_button.h  periph_console.h  periph_led.h  periph_mdns.h  periph_ota.h  periph_ppp.h  periph_sdcard.h  periph_touch.h  periph_web.h  periph_wifi.h  tct_template.h
esp-smarthome-wifi-mesh-fw/main/: CMakeLists.txt  Kconfig.projbuild  app_config.c  app_event.c  app_main.c  component.mk  esp_cc1101.c  idf_component.yml  periph_aircond.c  periph_aircond_homebus.c  periph_aircond_rs485.c  periph_aircond_spi.c  periph_aircond_uart.c  periph_led_low.c  periph_mesh.c  periph_mesh_aircond.c  periph_mesh_curtain.c  periph_mesh_ota.c  periph_mesh_pir.c  periph_mesh_remote.c  periph_mesh_touch.c  periph_monitor.c  periph_motor.c  periph_motor_drycontact.c  periph_motor_uart.c  periph_pir.c  periph_remote.c  periph_thermostat.c  reboot_timer.c
esp-smarthome-wifi-mesh-fw/main/include/: app_config.h  app_event.h  app_utility.h  hw_def.h  hw_rev1.h  hw_rev2.h  hw_rev3.h  periph_aircond.h  periph_led_low.h  periph_mesh.h  periph_mesh_ota.h  periph_monitor.h  periph_motor.h  periph_pir.h  periph_remote.h  periph_thermostat.h  reboot_timer.h
esp-smarthome-wifi-mesh-fw/main/lib/cc1101/: esp_cc1101.c  esp_cc1101.h
esp-smarthome-wifi-mesh-fw/main/lib/ir/: ir.c  ir.h  ir_daikin.c  ir_samsung.c
esp-smarthome-wifi-mesh-fw/main/lib/pcf8551a/: pcf8551a.c  pcf8551a.h  pcf8551a_reg.h
esp-smarthome-wifi-mesh-fw/main/lib/segment_display/: segment_display.c  segment_display.h  segment_display_icon.h
esp-smarthome-wifi-mesh-fw/main/websocket_client/: websocket_client.c
(+115 files in other folders)
